assets/css/style.css
* {
  font-family: "Roboto", sans-serif;
}

#com-dropdown {
  max-height: 250px; 
  overflow: auto;
}

.header {
  text-align: center;
  background-color: #1c3879;
  color: #f9f5eb;
  padding: 40px;
  width: 100%;
}

nav {
  background-color: #607eaa;
  padding: 8px;
}

#fetch-button {
  background-color: #1c3879;
  border-width: 0px;
}

.main-container {
  padding-top: 40px;
}

#showCommHeader {
    text-align: center;
    color: #1c3879;
    font-weight: bolder;
}

#currentPrice {
    justify-content: space-evenly;
    color: #1c3879;
    font-weight: bolder;
}

.footer {
  text-align: center;
  background-color: #1c3879;
  color: #f9f5eb;
}

.my-custom-scrollbar {
  position: relative;
  height: 650px;
  overflow: auto;
}

.table-wrapper-scroll-y {
  display: block;
}

@media (max-width: 992px) {
  html, body {
    overflow-x: hidden;
  }
}

@media (max-width: 520px) {
    /*make it so saved buttons are on right side of screen */
  #StoredButtons {
    display: flex;
    
  }
}

@media (max-width: 750px) {
  #fetch-button {

  }
}

/*
to do - fetch commodities button text goes over color, aside overlapping graph happens below 1200px, buttons overlapping
  nav {
    width: 100%;
  }
  #fetch-button {
    
  }
  .col-4 {

  }
  .footer {
    
  }
} */

